* Fixed navicon left align, not it's centered properly * Added new icon font for "back to material view" * Adjusted workspace.js script for right side additional navigation in material's reading view * Added button so user can go back to material view from reading view #442 * Changed every workspace navigation widget's class to be more precise * Added new icon fonts to assest as well * Added new widget workspace-materials-reading-goback and created widgetspace in materialäs rading view for the future use

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/_widgets.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/_widgets.scss
@@ -18,9 +18,48 @@ div[class*='dock-dynamic-navi-button'] > a {
   display:inline-block;
 }
 
+/* Workspace material's reading view's navigation */
+div[class*='workspace-materials-reading-navi-button'] > a,
+div[class*='workspace-materials-reading-navi-button'] > span {
+  cursor:pointer;
+  font-size:24pt;
+  color:#fff;
+  text-decoration:none;
+  @include iconShadow;
+  background:transparent;
+  padding:6px;
+  margin:2px;
+  display:inline-block;
+  position:relative;
+  width:34px;
+
+  span[class*='workspace-materials-reading-tt-container-'] {
+    opacity:0;
+    font-family:"Open Sans";
+    font-size:16px;
+    height:16px;
+    font-weight:300;
+    position:absolute;
+    top:0px;
+    left:-4500px;
+    width:0px;
+    color:#fff;
+    text-transform:uppercase;
+    padding:13px 15px 15px 14px;
+    @include rounded-top-left(3px);
+    @include rounded-bottom-left(3px);
+    @include workspaceTooltipTransition(opacity,0.15s,ease-in-out);
+  }
+    
+  &:hover {
+    @include iconShadow(rgba(255,255,190,0.5));
+    background:transparent;
+  }
+}
+
 /* Workspace navigation */
-div[class*='dock-workspace-navi-button'] > a,
-div[class*='dock-workspace-navi-button'] > span {
+div[class*='workspace-dock-navi-button'] > a,
+div[class*='workspace-dock-navi-button'] > span {
   cursor:pointer;
   font-size:24pt;
   color:#fff;
@@ -31,7 +70,7 @@ div[class*='dock-workspace-navi-button'] > span {
   margin:4px;
   display:inline-block;
   position:relative;
-  width:35px;
+  width:34px;
   @include rounded(3px);
   
   span[class*='workspace-navi-tt-container-'] {
@@ -67,7 +106,7 @@ div[class*='dock-workspace-navi-button'] > span {
 }
 
 /* Rule for workspace's dock's selected icon */
-div[class*='dock-workspace-navi-button-selected'] > span {
+div[class*='workspace-dock-navi-button-selected'] > span {
   background:#465b6c;
   cursor:pointer;
   font-size:24pt;
